--- a/index.html
+++ b/index.html
@@ -1,13 +1,21 @@
-<!DOCTYPE html><html><head>
+<!DOCTYPE html>
+
+<html>
+
+<head>
     <script src="p5.js"></script>
     <script src="p5.dom.min.js"></script>
     <script src="p5.sound.min.js"></script>
     <link rel="stylesheet" type="text/css" href="style.css">
     <meta charset="utf-8">
-
-  </head>
-  <body>
     <script src="sketch.js"></script>
-  
+  </head>
 
-</body></html>
+  <body>
+<h1>Drawing Machine</h1>
+<h3>hit 'd' to display </h3>
+<h3>hit 's' to save</h3>
+
+</body>
+
+</html>
