--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   </head>
 
   <body>
-<h1>Drawing Machine</h1>
+<h1>Like One of Your French Girlz</h1>
 <h3>hit 'd' to display </h3>
 <h3>hit 's' to save</h3>
 
