--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   </head>
 
   <body>
-<h1>Like One of Your French Girlz</h1>
+<h1>Honeycomb </h1>
 <h3>click and drag to make a sketch in the dark</h3>
 <h3>hit 's' to save</h3>
 <h3>hit 'c' to clear </h3>
