--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
   <body>
 <h1>Honeycomb </h1>
-<h3>click and drag to make a sketch in the dark</h3>
+<h3>lick and drag to make a sweet and sticky portrait</h3>
 <h3>hit 's' to save</h3>
 <h3>hit 'c' to clear </h3>
 
