--- a/index.html
+++ b/index.html
@@ -5,17 +5,16 @@
 <head>
     <script src="p5.js"></script>
     <script src="p5.dom.min.js"></script>
-    <!-- <script src="p5.sound.min.js"></script> -->
+    <script src="p5.sound.min.js"></script>
     <link rel="stylesheet" type="text/css" href="style.css">
     <meta charset="utf-8">
     <script src="sketch.js"></script>
   </head>
 
   <body>
-<h1>Honeycomb </h1>
-<h3>lick and drag to make a sweet and sticky portrait</h3>
+<h1>Like One of Your French Girlz</h1>
+<h3>hit 'd' to display </h3>
 <h3>hit 's' to save</h3>
-<h3>hit 'c' to clear </h3>
 
 </body>
 
