--- a/index.html
+++ b/index.html
@@ -5,16 +5,24 @@
 <head>
     <script src="p5.js"></script>
     <script src="p5.dom.min.js"></script>
-    <script src="p5.sound.min.js"></script>
+    <!-- <script src="p5.sound.min.js"></script> -->
     <link rel="stylesheet" type="text/css" href="style.css">
     <meta charset="utf-8">
     <script src="sketch.js"></script>
   </head>
 
   <body>
-<h1>Like One of Your French Girlz</h1>
-<h3>hit 'd' to display </h3>
+
+<h1>Remember When</h1>
+<!-- <h3>hit 'd' to display </h3> -->
 <h3>hit 's' to save</h3>
+<br>
+
+
+<div id="container">
+    <img class='img' src="images/drawingbook.png" alt="" style=""/>
+    <!-- <canvas id="createCanvas" width="800" height="600"></canvas> -->
+</div>
 
 </body>
 
