basic stamp machine

--- a/index.html
+++ b/index.html
@@ -18,6 +18,15 @@
 <h3>hit 's' to save</h3>
 <br>
 
+<!-- <script>
+var canvas = document.getELementByID("myCanvas");
+var ctx = canvas.getContext("2d");
+
+var image = new Image();
+img.src = 'images/drawingbook.png'
+ctx.drawImage(image, 0, 0, canvas.width, canvas.height);
+
+</script> -->
 
 <div id="container">
     <img class='img' src="images/drawingbook.png" alt="" style=""/>
