--- a/index.html
+++ b/index.html
@@ -15,9 +15,10 @@
 
 <h1>Remember When</h1>
 <!-- <h3>hit 'd' to display </h3> -->
-<h3>hit 's' to save</h3>
 <br>
+<p>You used to sit around a drawing book with your friends or cousins and reminice about the past? The giggles that would signal an unforgettable memory as markers and pens collaborated on the page. My drawing machine travels from the past, from a time where immocemce was still conditioned with the ideas of "real" the world, before reality sketched itself into a new world of actuality, a world so different than that of the coloring books. Like these stamp-tip markers, our ambitions are becoming rare.  </p>
 
+<h3>hit 's' to save your ambitions</h3>
 <!-- <script>
 var canvas = document.getELementByID("myCanvas");
 var ctx = canvas.getContext("2d");
