--- a/index.html
+++ b/index.html
@@ -11,7 +11,9 @@
     <script src="sketch.js"></script>
   </head>
 
-  <body>
+
+
+  <body background="images/background.jpg">
 
 <h1>Remember When</h1>
 <!-- <h3>hit 'd' to display </h3> -->
