--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 
 
-  <body background="images/background.jpg">
+  <body background="images/mural.jpg">
 
 <h1>Remember When</h1>
 <!-- <h3>hit 'd' to display </h3> -->
