--- a/index.html
+++ b/index.html
@@ -11,13 +11,10 @@
     <script src="sketch.js"></script>
   </head>
 
-
-
   <body background="images/mural.jpg">
 
-<h1>Remember When</h1>
-<!-- <h3>hit 'd' to display </h3> -->
-<br>
+<h1>Remember &nbsp;When &nbsp;</h1>
+
 <p>You used to sit around a drawing book with your friends or cousins and reminice about the past? The giggles that would signal an unforgettable memory as markers and pens collaborated on the page. My drawing machine travels from the past, from a time before actuality sketched itself into the real world, a world so different than that of the coloring books. Like these stamp-tip markers, our ambitions are becoming rare.  </p>
 
 <h3>hit 's' to archive your ambition</h3>
