--- a/index.html
+++ b/index.html
@@ -13,12 +13,29 @@
 
   <body background="images/mural.jpg">
 
-<h1>Remember &nbsp;When &nbsp;</h1>
 
-<p>You used to sit around a drawing book with your friends or cousins and reminice about the past? The giggles that would signal an unforgettable memory as markers and pens collaborated on the page. My drawing machine travels from the past, from a time before actuality sketched itself into the real world, a world so different than that of the coloring books. Like these stamp-tip markers, our ambitions are becoming rare.  </p>
+<h1>Remember When </h1>
+<style>
+@import url('https://fonts.googleapis.com/css?family=Open+Sans&display=swap');
+</style>
+
+<p>You used to sit around a drawing book with your friends or cousins and reminice about the past? The giggles that would signal an unforgettable memory as markers and pens collaborated on the page. My drawing machine travels from the past, from a time before actuality sketched itself into the real world, a world so different than that of the coloring books. Like these stamp-tipped markers, our ambitions are becoming rare.  </p>
 
 <h3>hit 's' to save your ambition</h3>
 
+<img src = "images/wink.png" alt="Wink Marker" style="float:left" width="35" height="290"/>
+<img id="myImg" src = "images/eye.png" alt="Eye Marker" style="float:left" width="60" height="290"/>
+<img src = "images/asterisk.png" alt="Asterisk Marker" style="float:left" width="40" height="290"/>
+<img src = "images/exclamation.png" alt="Exclamation Marker" style="float:right" hspace="9" width="35" height="290"/>
+<img src = "images/kiss.png" alt="Kiss Marker" style="float:right" hspace="9" width="35" height="290"/>
+<img src = "images/spiral.png" alt="Spiral Marker" style="float:right" hspace="9" width="35" height="290"/>
+
+
+<script>
+function myFunction() {
+  document.getElementById("myImg").src = "images/stamp9.png";
+}
+</script>
 
 </body>
 
