--- a/index.html
+++ b/index.html
@@ -23,12 +23,12 @@
 
 <h3>hit 's' to save your ambition</h3>
 
-<img src = "images/wink.png" alt="Wink Marker" style="float:left" width="35" height="290"/>
-<img id="myImg" src = "images/eye.png" alt="Eye Marker" style="float:left" width="60" height="290"/>
-<img src = "images/asterisk.png" alt="Asterisk Marker" style="float:left" width="40" height="290"/>
-<img src = "images/exclamation.png" alt="Exclamation Marker" style="float:right" hspace="9" width="35" height="290"/>
-<img src = "images/kiss.png" alt="Kiss Marker" style="float:right" hspace="9" width="35" height="290"/>
-<img src = "images/spiral.png" alt="Spiral Marker" style="float:right" hspace="9" width="35" height="290"/>
+<img  id = "winkMarker"= src = "images/wink.png" alt="Wink Marker" style="float:left" width="35" height="290"/>
+<img id="eyeMarker" src = "images/eye.png" alt="Eye Marker" style="float:left" width="60" height="290"/>
+<img id = "asteriskMarker" src = "images/asterisk.png" alt="Asterisk Marker" style="float:left" width="40" height="290"/>
+<img id = "exclamationMarker" src = "images/exclamation.png" alt="Exclamation Marker" style="float:right" hspace="9" width="35" height="290"/>
+<img id = "kissMarker" src = "images/kiss.png" alt="Kiss Marker" style="float:right" hspace="9" width="35" height="290"/>
+<img id = "spiralMarker" src = "images/spiral.png" alt="Spiral Marker" style="float:right" hspace="9" width="35" height="290"/>
 
 
 <script>
