--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <script src="sketch.js"></script>
   </head>
 
-  <body background="images/mural.jpg">
+  <!-- <body background="images/mural.jpg"> -->
 
 
 <h1>Remember When </h1>
